fix: bar gaps and label width

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -74,6 +74,7 @@ $white: hsl(33, 100%, 98%);
       .chart {
         display: flex;
         justify-content: space-between;
+        gap: 1rem;
       }
     }
 
@@ -124,7 +125,6 @@ $white: hsl(33, 100%, 98%);
   gap: 0.5rem;
   align-items: center;
   height: 14rem;
-  margin: 0 0.2rem;
 
   &:hover {
     z-index: 10;
@@ -163,10 +163,10 @@ $white: hsl(33, 100%, 98%);
     .label {
       position: absolute;
       top: -2rem;
-      left: -0.5rem;
-      width: calc(100% + 1rem);
+      left: 50%;
+      transform: translateX(-50%);
       border-radius: 4px;
-      padding: 0.5rem 0;
+      padding: 0.5rem;
       text-align: center;
       color: $white;
       background-color: $dark-brown;
